# VirtualGraffiti

./: .gitignore  README.md  build.gradle  empty.java  local.properties  settings.gradle
VirtualGraffiti/: Cargo.toml
VirtualGraffiti/src/: main.rs
Virtual_Graffiti/: .env  Cargo.toml
Virtual_Graffiti/migrations/2018-11-03-141752_images/: up.sql
Virtual_Graffiti/src/: db.rs  lib.rs  main.rs  schema.rs
app/: build.gradle
app/src/androidTest/java/com/example/ui_proj/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/vandyapp3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ui_proj/: MainActivity.java
app/src/main/java/com/example/vandyapp3/: MainActivity.java
app/src/main/res/drawable/: imagebuttons2.xml  imagebuttons3.xml  imagebuttonss.xml  splash.xml  splash_logo.xml
app/src/main/res/layout/: activity_android_camera_api.xml  activity_main.xml  activity_settings.xml  image_view.xml  splash_.xml  splash_logo.xml
app/src/main/res/menu/: activity_main_menu.xml  navigation.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/ui_proj/: ExampleUnitTest.java
app/src/test/java/com/example/vandyapp3/: ExampleUnitTest.java
arcore_client/: build.gradle
backend_flask/: __init__.py  db.py  schema.sql
gradle/wrapper/: gradle-wrapper.properties
gvr_common/: build.gradle
hello-rocket/: Cargo.toml
instance/: backend_flask.sqlite
openCVLibrary340/: build.gradle
openCVLibrary340/src/main/: AndroidManifest.xml
viro_core/: build.gradle
(+13 files in other folders)
