[package]
name = "Virtual_Graffiti"
version = "0.1.0"
authors = ["bishoyboktor"]

[dependencies]
rocket = "0.4.0-rc.1"
diesel = { version = "1.0.0", features = ["postgres"]}
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
